gtk-3.0/gtk.css
/* ... */
treeview entry:focus:dir(rtl),
treeview entry:focus:dir(ltr) {
    background-color: #0f0f0f;
    transition-property: color, background;
}

treeview entry.flat,
treeview entry {
    border-radius: 0;
    background-image: none;
    background-color: #0f0f0f;
}

treeview entry.flat:focus,
treeview entry:focus {
    border-color: @accent;
}

.entry-tag {
    padding: 5px;
    margin-top: 2px;
    margin-bottom: 2px;
    border-style: none;
    color: #ffffff;
    background-color: #2a2a2a;
}

:dir(ltr) .entry-tag {
    margin-left: 8px;
    margin-right: -5px;
}

:dir(rtl) .entry-tag {
    margin-left: -5px;
    margin-right: 8px;
}

.entry-tag:hover {
    background-color: #333333;
}

:backdrop .entry-tag {
    color: #c0c0c0;
    background-color: #1e1e1e;
}

.entry-tag.button {
    background-color: transparent;
    color: rgba(200, 200, 200, 0.7);
}

:not(:backdrop) .entry-tag.button:hover {
    border: 1px solid #2a2a2a;
    color: #ffffff;
}

:not(:backdrop) .entry-tag.button:active {
    background-color: #2a2a2a;
    color: rgba(200, 200, 200, 0.7);
}


/*********** Buttons * */

@keyframes needs_attention {
    from {
        background-image: radial-gradient(circle at center, #0faaf0 0%, transparent 1%);
    }
    to {
        background-image: radial-gradient(circle at center, @accent 0%, transparent 50%);
    }
}

button.titlebutton,
notebook > header > tabs > arrow,
button {
    min-height: 24px;
    min-width: 16px;
    padding: 4px 9px;
    border: 1px solid;
    border-radius: 5px;
    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
    color: #ffffff;
    outline-color: rgba(238, 238, 236, 0.3);
    border-color: #2a2a2a;
    border-bottom-color: #1e1e1e;
    background-image: linear-gradient(to top, #111111, #1a1a1a);
    text-shadow: 0 -1px rgba(0, 0, 0, 0.834353);
    -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.834353);
    box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), 0 1px 2px rgba(0, 0, 0, 0.3);
}

button.titlebutton,
button.sidebar-button,
notebook > header > tabs > arrow,
notebook > header > tabs > arrow.flat,
button.flat {
    border-color: transparent;
    background-color: transparent;
    background-image: none;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
    text-shadow: none;
    -gtk-icon-shadow: none;
    transition: none;
}

button.titlebutton:hover,
button.sidebar-button:hover,
notebook > header > tabs > arrow:hover,
button.flat:hover {
    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
    transition-duration: 500ms;
    background-color: rgba(255, 255, 255, 0.08);
}

button.titlebutton:hover:active,
button.sidebar-button:hover:active,
notebook > header > tabs > arrow:hover:active,
button.flat:hover:active {
    transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

notebook > header > tabs > arrow:hover,
button:hover {
    color: #ffffff;
    outline-color: rgba(238, 238, 236, 0.3);
    border-color: #2a2a2a;
    border-bottom-color: #1e1e1e;
    background-image: linear-gradient(to top, #1a1a1a, #222222);
    text-shadow: 0 -1px rgba(0, 0, 0, 0.786353);
    -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.786353);
    box-shadow: inset 0 1px rgba(255, 255, 255, 0.04), 0 1px 2px rgba(0, 0, 0, 0.3);
    -gtk-icon-effect: highlight;
}

notebook > header > tabs > arrow:active,
notebook > header > tabs > arrow:checked,
button:active,
button:checked {
    color: #ffffff;
    outline-color: rgba(238, 238, 236, 0.3);
    border-color: #2a2a2a;
    background-image: image(#1c1c1c);
    box-shadow: inset 0 1px rgba(0, 0, 0, 0.6);
    text-shadow: none;
    -gtk-icon-shadow: none;
    transition-duration: 50ms;
}

notebook > header > tabs > arrow:backdrop,
button.flat:backdrop,
button:backdrop {
    color: #c0c0c0;
    border-color: @unfocused_borders;
    background-image: image(#000000);
    text-shadow: none;
    -gtk-icon-shadow: none;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
    transition: 200ms ease-out;
    -gtk-icon-effect: none;
}

notebook > header > tabs > arrow:backdrop:active,
notebook > header > tabs > arrow:backdrop:checked,
button.flat:backdrop:active,
button.flat:backdrop:checked,
button:backdrop:active,
button:backdrop:checked {
    color: #c0c0c0;
    border-color: @unfocused_borders;
    background-image: image(#0e0e0e);
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
}

notebook > header > tabs > arrow:backdrop:disabled,
button.flat:backdrop:disabled,
button:backdrop:disabled {
    color: #505050;
    border-color: @unfocused_borders;
    background-image: image(#000000);
    text-shadow: none;
    -gtk-icon-shadow: none;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
}

notebook > header > tabs > arrow:backdrop:disabled:active,
notebook > header > tabs > arrow:backdrop:disabled:checked,
button.flat:backdrop:disabled:active,
button.flat:backdrop:disabled:checked,
button:backdrop:disabled:active,
button:backdrop:disabled:checked {
    color: #505050;
    border-color: @unfocused_borders;
    background-image: image(#0e0e0e);
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
}

button.titlebutton:backdrop,
button.sidebar-button:backdrop,
notebook > header > tabs > arrow:backdrop,
button.titlebutton:disabled,
button.sidebar-button:disabled,
notebook > header > tabs > arrow:disabled,
button.flat:backdrop,
button.flat:disabled,
button.flat:backdrop:disabled {
    border-color: transparent;
    background-color: transparent;
    background-image: none;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
    text-shadow: none;
    -gtk-icon-shadow: none;
}

notebook > header > tabs > arrow:disabled,
button:disabled {
    color: #c0c0c0;
    border-color: #2a2a2a;
    background-image: image(#000000);
    text-shadow: none;
    -gtk-icon-shadow: none;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0);
}
/* ... */

